# mcp-license-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
src/license_mcp/: __init__.py  cli.py  engine.py  errors.py  filtering.py  mcp_server.py  models.py  shell.py  storage.py
src/license_mcp/scanners/: __init__.py  common.py  image.py  repo.py
tests/: test_filtering.py
